Fix behavior of dropdown in navbar on mobile

--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -25,4 +25,11 @@
       }
     }
   }
+
+.navbar-dropdown:not(.is-active) {
+  display: none;
+}
+.navbar-dropdown .is-active{
+  display: block;
+}
   
